# libexception

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  config.mk  config.mk.in  configure  configure.ac  libexception.pc  libexception.pc.in  package.mk
debian/: README  changelog  control  copyright  rules
src/: Makefile  Makefile.am  Makefile.in  exception.c  exception.h
t/: Makefile  Makefile.am  test1.c
